<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

   <!--
   Copyright 2010-2020 by Sebastian Thomschke and others.

   This program and the accompanying materials are made
   available under the terms of the Eclipse Public License 2.0
   which is available at https://www.eclipse.org/legal/epl-2.0/

   SPDX-License-Identifier: EPL-2.0
   -->

   <modelVersion>4.0.0</modelVersion>

   <parent>
      <groupId>com.vegardit.maven</groupId>
      <artifactId>vegardit-maven-parent</artifactId>
      <version>RELEASE</version>
   </parent>

   <groupId>net.sf.jstuff</groupId>
   <artifactId>jstuff-parent</artifactId>
   <version>5.7.2-SNAPSHOT</version>
   <packaging>pom</packaging>


   <name>jstuff</name>
   <url>https://sourceforge.net/projects/jstuff/</url>
   <description>Toolbox for Java</description>
   <inceptionYear>2010</inceptionYear>


   <licenses>
      <license>
         <name>Eclipse Public License 2.0</name>
         <distribution>repo</distribution>
         <url>https://spdx.org/licenses/EPL-2.0</url>
      </license>
   </licenses>


   <developers>
      <developer>
         <id>sebthom</id>
         <name>Sebastian Thomschke</name>
         <email>sebthom at users.sourceforge.net</email>
         <url>https://sebthom.de/</url>
         <roles>
            <role>lead</role>
            <role>developer</role>
         </roles>
         <timezone>Europe/Berlin</timezone>
      </developer>
   </developers>


   <properties>
      <java.version>8</java.version>

      <!-- https://search.maven.org/search?q=g:org.slf4j -->
      <slf4j.version>1.7.30</slf4j.version>

      <skip.japicmp.cmp>true</skip.japicmp.cmp>
   </properties>


   <scm>
      <!-- http://maven.apache.org/scm/git.html -->
      <url>https://github.com/sebthom/jstuff</url>
      <connection>scm:git:https://github.com/sebthom/jstuff.git</connection>
      <developerConnection>scm:git:https://github.com/sebthom/jstuff.git</developerConnection>
      <tag>HEAD</tag>
   </scm>


   <distributionManagement>
      <downloadUrl>https://jcenter.bintray.com/</downloadUrl>
      <repository>
         <id>bintray-release-uploads</id>
         <url>https://api.bintray.com/maven/sebthom/maven/jstuff/;publish=1</url>
      </repository>
   </distributionManagement>


   <ciManagement>
      <system>github.com</system>
      <url>https://github.com/sebthom/jstuff/actions</url>
   </ciManagement>


   <issueManagement>
      <system>github.com</system>
      <url>https://github.com/sebthom/jstuff/issues</url>
   </issueManagement>


   <modules>
      <module>jstuff-core</module>
      <module>jstuff-integration</module>
      <module>jstuff-xml</module>
   </modules>


   <build>
      <plugins>
         <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>build-helper-maven-plugin</artifactId>
            <executions>
               <execution>
                  <id>add-license-file-to-jar</id>
                  <phase>generate-resources</phase>
                  <goals>
                     <goal>add-resource</goal>
                  </goals>
                  <configuration>
                     <resources>
                        <resource>
                           <directory>./</directory>
                           <targetPath>META-INF</targetPath>
                           <includes>
                              <include>../LICENSE.txt</include>
                           </includes>
                        </resource>
                     </resources>
                  </configuration>
               </execution>
            </executions>
         </plugin>
      </plugins>
   </build>


   <!-- global dependencies -->
   <dependencies>
      <!-- test dependencies -->
      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.13.1</version>
         <scope>test</scope>
      </dependency>
   </dependencies>


   <dependencyManagement>
      <dependencies>
         <dependency>
            <groupId>com.thoughtworks.paranamer</groupId>
            <artifactId>paranamer</artifactId>
            <version>2.8</version>
         </dependency>

         <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.11</version>
         </dependency>
         <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.8.0</version>
         </dependency>
      </dependencies>
   </dependencyManagement>

</project>
